@@ -1,6 +1,7 @@
 2006-06-11  Guillaume Smet <guillaume-pg@smet.org>
 
 	* fixed a problem with NOTICE/STATEMENT couple on DDL
+	* improved the -report option analysis
 
 2006-05-27  Guillaume Smet <guillaume-pg@smet.org>
 
